# debate-lab

./: .gitignore  AGENTS.md  PYTHON_API_DESIGN.md  PYTHON_ARCHITECTURE.md  PYTHON_DEVELOPMENT.md  README.md  SPEC.md  TYPESCRIPT_DEVELOPMENT.md  debate.toml
apps/api/: pyproject.toml
apps/api/src/debate_api/: __init__.py  app.py  dependencies.py
apps/api/src/debate_api/middleware/: __init__.py  error_handler.py  request_id.py
apps/api/src/debate_api/routes/: __init__.py  events.py  runs.py
apps/api/tests/: conftest.py
apps/api/tests/integration/: test_runs_api.py
apps/web/: package-lock.json  package.json
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/runs/[id]/: page.tsx
apps/web/src/components/debate/: agent-panel.tsx  claim-card.tsx  event-stream.tsx  evidence-table.tsx  input-form.tsx  report-view.tsx  timeline.tsx  tool-calls-log.tsx  transcript-view.tsx
apps/web/src/hooks/: use-sse.ts
apps/web/src/lib/: api.ts  types.ts
apps/web/src/stores/: debate-store.ts
docs/: ARCHITECTURE.md  DECISIONS.md  RESEARCH.md  ROADMAP.md  SPEC_RAW.md  THREAT_MODEL.md
reports/: architecture_decision.json  research_article.json  security_review.json
scripts/: seed_examples.py  test_deepseek.py  test_e2e_real.py  test_openai.py
videos/from-the-edge-to-the-center/: hyperframes.json  index.html
